Fixed missing pics and PATH issues

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ li a {
     <p>Flyttar först lab2.cc från katalogen lab1 till katalogen lab2 sen flyttas lab2.h från katalogen lab1 till katalogen lab2</p>
     <p>Kolla filsystemets trädstruktur med tree. Det ska se ut som bilden nedan.</p>
     <p><b>tree .</b></p>
-    <img src="./Pictures/tree.png" alt="Tree Structure pic">
+    <img src="./Pictures/Tree_Structure.png" alt="Tree Structure pic">
     <p>Ändra innehållet i README.md med valfri editor, öppna med nano</p>
     <p><b>nano lab2/README.md</b></p>
     <p>Skriv något sen spara genom att trycka på <i>CTRL O</i>. Stäng sedan nano genom att trycka <i>CTRL X</i></p>
@@ -295,7 +295,7 @@ li a {
     <p><b>git push</b></p>
     <p>Ifall det kommer upp något i stil med <i>Your name and e-mail address were configured automatically based on your username and hostname</i> betyder det att hostnamnet lagts till som email för inloggning på gitlab.liu.se. Detta är fel och ändras med:</p>
     <p><b>git config --global --edit</b></p>
-    <img src="./Pictures/git-config_global_edit.png" alt="git_config pic">
+    <img src="./Pictures/git_config_global_edit.png" alt="git_config pic">
     <p>Du är nu i en editor i terminalen och kan ändra email till det för ditt gitlab konto. Flytta dig med piltangenterna. Glöm inte att ta bort # tecknena längst ut till vänster på raderna med "name =" och "email =" då de gör att raderna inte läses in.</p>
     <img src="./Pictures/email_for_gitlab.png" alt="email for gitlab pic">
     <p>Spara och stäng genom att trycka på knappen <i>F1</i></p>
@@ -377,7 +377,7 @@ li a {
     <p><b>sudo apt install tree</b></p>
     <p>Lista katalogstrukturen för TDP004 med kommandot tree</p>
     <p><b>tree .</b></p>
-    <img src="./Pictures/tree_struc_tdp004.png" alt="Tree Structure for TDP004 pic">
+    <img src="./Pictures/Tree_Structure_TDP004.png" alt="Tree Structure for TDP004 pic">
     <h2 style="color: green">Klart!</h2>
 </div>
 
