Removed obsolete disclaimer

--- a/index.html
+++ b/index.html
@@ -171,10 +171,7 @@ li a {
 </div>
 
 <div class="col-9">
-  <h1 id="TM35"> Terminalmejl V35</h1
-  <h2 style="color: orange">Disclaimer!</h2>
-  <p>Eftersom jag redan har ett git-projekt innehållandes back-up för alla mina kurser är det onödigt att ha ytterligare ett <i>nytt</i> projekt bara specifikt för den här uppgiften. Nedanstående instruktioner kommer uppfylla uppgiften, men notera att det är bättre för mig om ssh TDP001 katalogen är knuten till min back-up på git och inte ett ensamstående projekt.</p>
-  <h2 style="color: green; font-size: 20px">End of Disclaimer</h2>
+  <h1 id="TM35"> Terminalmejl V35</h1>
   <p>Använd först ssh för att ansluta till ditt konto på liu.</p>
   <p><b>ssh ssh.edu.liu.se</b></p>
   <p>Logga in med inloggningsuppgifter.</p>
