--- a/index.html
+++ b/index.html
@@ -198,9 +198,10 @@ li a {
   <p>När push:en lyckats fås något i stil med:</p>
   <img src="./Pictures/project_creation_complete_w_git_push.png" alt="project_creation pic">
   <p>Denna katalog är nu knutet till repot och push respektive pull kommer per default ske till https://gitlab.liu.se/danhu849/TDP001.git</p>
-  <p><a href="https://gitlab.liu.se/danhu849/TDP001">Länk till gitlab projektet.</a></p>
+  <p><a href="https://gitlab.liu.se/danhu849/TDP001" target="_blank">Länk till gitlab projektet, öppnas i ny flik.</a></p>
   <h2 style="color: green">Klart!</h2>
 </div>
+
 
 <div class="col-8">
   <h1 id="TU21"> 2.1 Kataloger och filer</h1>
