--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+<html lang="sv">
+  <head>
+    <title>danhu849 hemsida</title>
+<meta charset="utf-8"/>
 <style>
 * {
   box-sizing: border-box;
@@ -54,7 +55,7 @@
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0 px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 /* Links inside the dropdown */
@@ -208,7 +209,7 @@ li a {
   <p>Öppnar terminal genom att trycka <i>Ctrl ALT T</i> samtidigt</p>
   <p>Skapar katalogen ~/TDP004/lab1 med mkdir (make directory)</p>
   <p><b>mkdir -p ~/TDP004/lab1</b></p>
-  <p>Använde flaggan -p så att det inte skulle bildas några errors ifall mappen/mapparna redan fanns samt om nödvändigt skapa kataloger ovanför i katalogträdet.</p></p>
+  <p>Använde flaggan -p så att det inte skulle bildas några errors ifall mappen/mapparna redan fanns samt om nödvändigt skapa kataloger ovanför i katalogträdet.</p>
   <p>Skapade en README.md i katalogen ~/TDP004 och skrev någonting i den.
   <p><b>echo "någonting" > TDP004/README.md</b></p>
   <p><b>echo</b> återupprepar strängen innanför ""</p>
@@ -385,9 +386,7 @@ li a {
     <p>Hitta alla filer som är körbara i din hemkatalog.</p>
     <p><b>find ~ -executable -type f</b></p>
     <p>find letar efter filer hierarkiskt nedåt från en specificerad katalog. flaggan -executable filtrerar fram alla exekverbara entiteter och -type f specificerar att entiteterna ska vara av typen filer. </p>
-    <p><b></b></p>
-    <p><b></b></p>
-    <h2 style="color: green">Klart!</h2>
+<h2 style="color: green">Klart!</h2>
 </div>
 </div>
 </body>
