--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ li a {
       </button>
       <div class="dropdown-content">
 	<a href="#TM35">Terminalmejl V35</a>
+	<a href="#TM36">Terminalmejl V36</a>
       </div>
     </div>
   </div>
