--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ li a {
 </div>
 
 <div class="col-9">
-  <h1 id="TM35"> Terminalmejl V35</h1>
+  <h1 id="TM35">Terminalmejl V35</h1>
   <p>Använd först ssh för att ansluta till ditt konto på liu.</p>
   <p><b>ssh ssh.edu.liu.se</b></p>
   <p>Logga in med inloggningsuppgifter.</p>
@@ -202,6 +202,43 @@ li a {
   <p>Denna katalog är nu knutet till repot och push respektive pull kommer per default ske till https://gitlab.liu.se/danhu849/TDP001.git</p>
   <p><a href="https://gitlab.liu.se/danhu849/TDP001" target="_blank">Länk till gitlab projektet, öppnas i ny flik.</a></p>
   <h2 style="color: green">Klart!</h2>
+</div>
+
+<div class="col-9">
+  <h1 id="TM36">Terminalmejl V36</h1>
+  <p>Öppna först filen <a href="./resultat.txt">resultat.txt</a> och spara den på lämplig plats. Gå sedan in med terminalen till katalogen där du har sparat den.</p>
+  <p><b>cd /TDP001</b></p>
+  <p>Skriv ut alla rader med hjälp av grep från resultat.txt filen vars förnamn eller efternamn slutar på 'on'.</p>
+  <p><b>grep 'on' resultat.txt</b></p>
+  <img src="./Pictures/TM35-uppg-1.png" alt="grep 'on'">
+  <p>Med grep kan man leta efter specifika mönster av tecken i filer. grep skriver ut varje rad i filen som innehåller det specificerade sökmönstret. Lyckligtvis slutar varje namn på 'on' som har 'on' i sig så det behövs ingen mer komplicerad grep variant än den ovan.</p>
+  <p>Skriv ut de första fem efternamnen som inte avslutas med "son".</p>
+  <p><b>grep -v 'son' resultat.txt | head -n5</b></p>
+   <img src="./Pictures/grep_-v_head_-n5.png" alt="grep -v | head -n5">
+  <p>-v flaggan instruerar grep att bara ta de rader som inte har sökmönstret, 'son' i sig. Utdatan från grep, dvs alla rader som inte har 'son' i sig, pipe:as (förs vidare) till head kommandot. head kommandot presenterar det översta innehållet från en läst fil om denna är specificerad annars läser head från input. I detta fall blir head:s input grep:s output. Med flaggan -n5 bestämms det att bara de fem första resultaten ska skrivas ut.</p>
+  <p>Skriv ut alla filnamn från mappen /usr/lib som har ändelsen .so* till fil med lämpligt namn. Filnamnen ej innehålla punkten och ändelsen.</p>
+  <p><b></b></p>
+  <p></p>
+  <p><b></b></p>
+  <p></p>
+  <p><b></b></p>
+  <p></p>
+  <p><b></b></p>
+  <p></p>
+  <p><b></b></p>
+  <p></p>
+  <p><b></b></p>
+  <p></p>
+  <p><b></b></p>
+  <p></p>
+  <p><b></b></p>
+  <p></p>
+  <p><b></b></p>
+  <p></p>
+  <p><b></b></p>
+  <p></p>
+  <p><b></b></p>
+  
 </div>
 
 
