TM36 now validates w3

--- a/index.html
+++ b/index.html
@@ -224,22 +224,8 @@ li a {
   <p><b>grep -i -e 'an' resultat.txt -c</b></p>
   <p>-i flaggan specificerar att grep -e 'an' inte ska skilja på gemener och versaler. -c flaggan gör att grep bara räknar så många rader som innehåller söktermen.</p>
   <img src="./Pictures/grep_rader_an.png" alt="grep 7 rader an">
-  <p><b></b></p>
-  <p></p>
-  <p><b></b></p>
-  <p></p>
-  <p><b></b></p>
-  <p></p>
-  <p><b></b></p>
-  <p></p>
-  <p><b></b></p>
-  <p></p>
-  <p><b></b></p>
-  <p></p>
-  <p><b></b></p>
-  <p></p>
-  <p><b></b></p>
-  
+  <p>Ladda upp ett latex-dokument till din www-pub katalog (/wwwpub/liuid/TDP001/) som kompilerats utifrån mallen i TDP003. Om du inte vet var dokumentmallen finns på kurssidan i TDP003 är det dags att titta igenom den kurssidan. I det kompilerade dokumentet skall du ha uppdaterat sidhuvud och sidfot till ditt namn. Länka till detta dokument från din blogg.</p>
+  <p><a href="./Kompilerad_mall_med_mitt_namn.pdf" target="_blank">Kompilerad_mall_med_mitt_namn.pdf</a></p>  
 </div>
 
 
